# ProcVigil

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: procvigil.json  procvigil.yml
docs/: KULLANIM.md
examples/: README.md  http-example.yml  webhook_receiver.py
launchd/: com.procvigil.daemon.plist
procvigil/: __init__.py  __main__.py  cli_ctl.py  config.py  control.py  logger.py  metrics.py  notifier.py  process.py  supervisor.py
scripts/: install-macos.sh  install.sh  remote-install.sh  uninstall-macos.sh  uninstall.sh
systemd/: procvigil.service
tests/: conftest.py  test_config.py  test_control.py  test_metrics.py  test_notifier.py  test_process.py  test_supervisor.py
